remove Java compatibility